--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,10 +23,7 @@
             <h6>
               <%=products[i].name %>
             </h6>
-            <img src="images/<%= products[i].image %>" alt="" width="90px">
-            <div class="price-container">
-              <h4 class="price">$<%= products[i].price %></h4>
-          </div>
+            <img src="/images/<%= products[i].image %>" alt="" width="90px">
           </a>
           </div>
           <%}; %>
@@ -43,10 +40,7 @@
             <h6>
               <%=products[i].name %>
             </h6>
-            <img src="images/<%= products[i].image %>" alt="" width="90px">
-            <div class="price-container">
-              <h4 class="price">$<%= products[i].price %></h4>
-          </div>
+            <img src="/images/<%= products[i].image %>" alt="" width="90px">
           </a>
           </div>
           <%}; %>
