--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,23 +1,24 @@
 <footer>
     <div class='brand'>
         ML CAMISETAS <i class="fa-solid fa-futbol"></i>
-
     </div>
 
     <nav class="footer-links">
-        <a href="#" class="nav-link">QUIENES SOMOS </a>
-        <a href="#" class="nav-link">CONTACTO</a>
-        <a href="#" class="nav-link">MARCAS</a>
+        <a href="#" class="footer-link">QUIENES SOMOS </a>
+        <a href="#" class="footer-link">CONTACTO</a>
+        <a href="#" class="footer-link">MARCAS</a>
     </nav>
 
     <div class="brands">
         <a href="/#"><i class="fa-brands fa-instagram"></i></a>
         <a href="/#"><i class="fa-brands fa-twitter"></i></a>
-      </div>
+    </div>
 
 </footer>
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
