--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,86 +13,75 @@ body {
 button {
     cursor: pointer;
 }
+
 /* HEADER */
 
 header {
-    padding: 5px;
-    background-color: #0A2647;
     width: calc(100% + 10px);
 }
 
-.brand {
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-    color: white;
+header nav {
 
-}
-
-.brand i {
-    padding: 1px 4px;
-}
-
-.search {
-    display: flex;
-    height: 40px;
-    width: 80%;
-    margin-left: 10%;
-}
-
-.search input {
-    color: #0A2647;
-    border: 0px solid white;
+    height: 80px;
     width: 100%;
-    outline: none;
-    padding: 2px;
+
 }
 
-.search button {
-    background-color: white;
+.navbar-collapse {
+    position: absolute;
+    background-color: #212529;
+    z-index: 2;
+    right: 0;
+    top: 78px;
+    padding: 0px 15px;
+}
+
+header a,
+header p {
+    color: #fff !important;
+}
+
+header a:hover {
+    background: hsla(240, 9%, 59%, .1);
+    transition: all .3s;
+    border-radius: .25rem;
+}
+
+header a.dropdown-item {
+    color: #000 !important;
+}
+
+header a.dropdown-item:focus {
+    background-color: transparent !important;
+
+}
+
+
+header input.form-control {
+    background: none;
     border: none;
-    color: #0A2647;
-    width: 10%;
-}
-
-input::placeholder {
-    color: #0A2647;
-}
-
-.user-links {
-    padding: 10px;
-    text-align: center;
-    justify-content: center;
-    display: flex;
-    margin-top: 7px;
+    outline: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 9999px;
+    box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+    color: #fff !important;
+    background-color: #212121 !important;
 
 }
 
-.user-links a {
-    cursor: pointer;
-    color: white;
-    text-decoration: none;
-    margin: 0 22px;
-    font-size: 11px;
+header input::placeholder {
+    color: #fff !important;
 }
 
-.user-links i {
-    margin: 0 4px;
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
-
-.menu {
-    color: white;
-}
-
-.store-links {
-    display: none;
-}
-
 
 /* HEADER  IF USER IS LOGGED */
 
-.nav-loggedOptions, .nav-loggedOptions a {
+.nav-loggedOptions,
+.nav-loggedOptions a {
     display: flex;
     flex-direction: column;
     margin: 10px;
@@ -102,6 +91,59 @@ input::placeholder {
     max-width: fit-content;
 }
 
+/* MODAL */
+
+.modal-body {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 0;
+}
+
+.modal-body .product-cart-img {
+    width: 15%;
+}
+
+.modal-body .product-cart-img img{
+  width: 100%;
+}
+
+.modal-body .cart-paragraphs  {
+    display: flex;
+    width: 70%;
+    margin: auto;
+}
+.modal-body .cart-paragraphs p {
+    color: #212529 !important;
+    margin: 0 10px;
+
+}
+
+.cart-buttons {
+    display: flex;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+}
+
+.cart-buttons button {
+    padding: 5px;
+    margin: 5px;
+    border: none;
+    outline: none;
+    transition: all ease .3s;
+    
+}
+ .cart-buttons input{
+    padding: 5px;
+    margin: 5px;
+    border: #212529 solid 1px;
+    outline: none;
+    background: none !important;
+}
+
+.modal-footer {
+    justify-content: space-between;
+}
 
 /* MAIN */
 
@@ -120,7 +162,6 @@ h2 {
 
 
 .footballProduct {
-    background-color: #0A2647;
     margin: 30px auto;
     width: 220px;
     height: 260px;
@@ -128,16 +169,20 @@ h2 {
     flex-wrap: wrap;
     min-width: 40%;
     justify-content: space-between;
-    transition: 400ms all ease;
+    background: linear-gradient(344deg, rgba(40, 40, 55, 1) 0%, rgba(16, 16, 18, 1) 50%);
+    box-shadow: 4px 6px 14px #00000036;
+    border-radius: 3px;
+    color: #F9F9F9;
+    transition: all .3s;
 
 }
 
 .footballProduct:hover {
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);  
-    transform: translateY(-5%);
+    margin-top: -10px;
 }
 
-.footballProduct h6, a {
+.footballProduct h6,
+.footballProduct a {
     position: relative;
     font-size: 13px;
     margin: auto;
@@ -170,40 +215,28 @@ h2::after {
     bottom: -1px;
     height: 2px;
     background-color: #0A2647;
-  }
-
-  main .footballProduct:hover .price-container {
-    height: 10px;
-    opacity: 1;
-    font-size: 15px;
-  }
-  
-  .footballProduct .price-container {
-    height: 0;
-    opacity: 0;
-    transition: 550ms ease-in-out;
-    font-size: 15px;
-    color: #17ff36
 }
+
 
 /* FOOTER */
 
 footer {
-    width: calc(100% + 10px);    
-    background-color: #0A2647;
+    width: calc(100% + 10px);
+    background-color: #212121;
     margin-top: auto;
+    color: #f7fbfc;
 }
 
 footer .brand {
     padding: 5px;
-
+    text-align: center;
 }
 
 footer .links {
     width: 100%;
     font-size: 10px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 footer .brands {
@@ -223,9 +256,8 @@ footer .brands a {
 .footer-links {
     display: flex;
     margin-right: 2%;
-    margin-bottom: 15px;
-    
-
+    margin: 15px 0;
+    justify-content: space-around;
 }
 
 .footer-links a {
@@ -235,241 +267,16 @@ footer .brands a {
     justify-content: space-around;
 }
 
-.negroGlobal {
-    background-color: #100505
-}
-
-.celesteArg {
-    background-color: #60AFE1;
-}
-
-.violetaArg {
-    background-color: #353776;
-}
-
-.azulBoca {
-    background-color: #103f79;
-}
-
-.amarilloBoca {
-    background-color: #f3b229;
-}
-
-.rojoRiver {
-    background-color: #eb192e;
-}
-
-.rojoIndependiente {
-    background-color: #e2001a;
-}
-
-.celesteRacing {
-    background-color: #029cdc;
-}
-
-.bordoSanLorenzo {
-    background-color: #ec212d;
-}
-
-.azulSanLorenzo {
-    background-color: #273b56;
-}
-
-.rojoArgentinos {
-    background-color: #fb0b0e;
-    
-}
-
-.azulArgentinos {
-    background-color: #0d3e8a;
-}
-
-.celesteArsenal {
-    background-color: #25add7;
-}
-
-.rojoArsenal {
-    background-color: #ed2330;
-}
-
-.celesteAtleticoTucuman {
-    background-color: #62bcf1;
-}
-
-.azulAtleticoTucuman {
-    background-color: #344B7E;
-}
-
-.verdeBanfield {
-    background-color: #03953f;
-}
-
-.rojoBarracas {
-    background-color: #FC0204;
-}
-
-.blancoBarracas {
-    background-color: #FCFEFC;
-}
-
-.celesteBelgrano {
-    background-color: #16C1F3;
-}
-
-.negroBelgrano {
-    background-color: #30323A;
-}
-
-.negroCentralCordoba {
-    background-color: #000000;
-}
-
-.rojoCentralCordoba {
-    background-color: #A62727;
-}
-
-.rojoColon {
-    background-color: #e1171d;
-}
-
-.amarilloDefensa {
-    background-color: #D9B727;
-}
-
-.verdeDefensa {
-    background-color: #18443D;
-}
-
-.rojoEstudiantes {
-    background-color: #e40b12;
-}
-
-.azulGimnasia {
-    background-color: #09446a;
-}
-
-.azulGodoyCruz {
-    background-color: #002988;
-}
-
-.grisGodoyCruz {
-    background-color: #b4b0b2;
-}
-
-.rojoHuracan {
-   background-color: #C41B14;
-}
-
-.rojoInstituto {
-    background-color: #FA0202;
-}
-
-.bordoLanus {
-    background-color: #ab2a3e;
-}
-
-.rojoNewells {
-    background-color: #f42121;
-}
-
-.marronPlatense {
-    background-color: #5c3919;
-}
-
-.azulRosarioCentral {
-    background-color: #1F4972;
-}
-
-.amarilloRosarioCentral {
-    background-color: #f5c513;
-}
-
-.verdeSarmiento {
-    background-color: #056E35;
-}
-
-.verdesitoSarmiento {
-    background-color: #528F6B;
-}
-
-.azulTalleres {
-    background-color: #05173b;
-}
-
-.azul2Talleres {
-    background-color: #1A347D;
-}
-
-.azulTigre {
-    background-color: #2A3089;
-}
-
-.rojoTigre {
-    background-color: #B82D40;
-}
-
-.rojoUnion {
-    background-color: #df1216;
-}
-
-.azulUnion {
-    background-color: #052C91;
-}
-
-.azulVélez {
-    background-color: #0a539c;
-}
-
-.azul2Vélez {
-    background-color: #13378D;
-}
 
 @media (min-width: 769px) {
 
-
-    /* HEADER */
-
-    .brand {
-        padding: 10px;
+    header form .form-control {
+        width: 220px;
     }
 
-    .search {
-        display: inline-flex;
-        width: 45%;
-        margin-bottom: 10px;
+    .navbar-brand {
+        margin: 0 5rem;
     }
-
-    .user-links {
-        width: 40%;
-        right: -10px;
-        top: 70px;
-        position: absolute;
-        font-size: 14.5px;
-        margin: 5px;
-
-    }
-
-    .user-links i {
-        font-size: 10.5px;
-        display: inline;
-    }
-
-    .menu {
-        display: none;
-    }
-
-    nav {
-        display: flex;
-        justify-content: space-around;
-        padding: 20px 0;
-    }
-
-    nav a {
-        cursor: pointer;
-        color: white;
-        text-decoration: none;
-    }
-
 
     /* MAIN */
 
@@ -477,70 +284,51 @@ footer .brands a {
         min-width: 30%;
     }
 
-    .footballProduct h6, a {
+    .footballProduct h6,
+    .footballProduct a {
         margin: 5px 3px;
     }
-        
-    
 
-        
+
     /* FOOTER */
 
     footer .brand {
         padding: 10px;
-
+        font-size: larger;
     }
 
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 992px) {
 
-
-    /* HEADER */
-    .search {
-        width: 55%;
+    .navbar-collapse {
+        display: block;
+        position: relative;
+        background-color: #212529;
+        z-index: 2;
+        padding: 0px;
+        right: 0;
+        top: 0;
 
     }
 
-    .user-links {
-        width: 37%;
-    }
-
-     
     /* MAIN */
     .footballProduct {
         min-width: 23%;
     }
 
-    .footballProduct h6, a {
+    .footballProduct h6,
+    .footballProduct a {
         margin: 5px 7px;
     }
 
     /* FOOTER  */
-    .footer-links a{
+    .footer-links a {
         font-size: large;
     }
 
-    footer .brands i{
+    footer .brands i {
         font-size: xx-large;
     }
 
 }
-
-@media (min-width: 1240px) {
-
-
-    /* HEADER */
-    .search {
-        width: 60%;
-
-    }
-
-    .user-links {
-        width: 30%;
-
-
-    }
-
-}
-
