--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,16 +4,6 @@
     box-sizing: border-box;
 }
 
-
-.log-form {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    width: 300px;
-    text-align: center;
-    justify-content: center;
-}
-
 html, body {
     height: 100%;
     display: flex;
@@ -21,104 +11,123 @@ html, body {
 
 }
 
-body h5 {
-    text-align: center;
-    margin-top: 10px;
-    font-size: 25px;
-    color: white;
-    margin-bottom: 40px;
-    position: relative;
-}
-
-.log-form {
-   
-    display: flex;
-    justify-content: center;
-    text-align: center;
-}
-
-.log-form form {
+.form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    gap: 10px;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-bottom: 0.4em;
+    background-color: #171717;
+    border-radius: 25px;
+    margin: 50px auto ;
+    width: 95%;    
+  }
+  
+  .form:hover {
+   border: 1px solid black;
+  }
+  
+  #heading {
     text-align: center;
-}
-
-.log-form .inputs {
-    background-color: transparent;
-    font-size: 15px;
+    margin: 2em;
+    color: rgb(255, 255, 255);
+    font-size: 1.2em;
+  }
+  
+  .field {
     display: flex;
+    align-items: center;
     justify-content: center;
-    text-align: center;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    padding: 10px;
-    margin: auto;
-    margin-bottom: 50px;
+    gap: 0.5em;
+    border-radius: 25px;
+    padding: 0.6em;
     border: none;
     outline: none;
-    border-bottom: 2px solid white;
     color: white;
-    
-
-}
-
-.log-form .inputs::placeholder {
-    font-size: 15px;
-    color: white;
-}
-
-.log-form .interaction-button input {
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin-top: 15px;
-    padding: 10px;
-    width: 90%;
+    background-color: #171717;
+    box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+    margin: 1em;
+  }
+  
+  .input-icon {
+    height: 1.3em;
+    width: 1.3em;
+    fill: white;
+  }
+  
+  .input-field {
+    background: none;
     border: none;
     outline: none;
-    color: #fbb117;
-    border-radius: 10px;
-    background: linear-gradient(#38b6ff, white, #38b6ff);
-    cursor: pointer;
-    margin-bottom: 10px;
-    margin-top: 15px;
-}
-
-.log-links {
+    width: 100%;
+    color: #d3d3d3;
     
+  }
+  
+  .form .btn {
     display: flex;
-    flex-direction: column;
-    margin-top: 30px;
+    justify-content: center;
+    flex-direction: row;
+    margin-top: 2.5em;
+    margin: 2em;
+  }
+  
+  .button1 {
+    padding: 0.5em;
+    padding-left: 1.1em;
+    padding-right: 1.1em;
+    border-radius: 5px;
+    margin-right: 0.5em;
+    border: none;
+    outline: none;
+    transition: .4s ease-in-out;
+    background-color: #252525;
     color: white;
-    text-decoration: none;
-}
-
-.log-links a {
-    font-size: 20px;
-    margin-bottom: 15px;
+  }
+  
+  .button1:hover {
+    background-color: black;
     color: white;
-    text-decoration: none;
-}
-
-.bg-color {
-    
-    background-color: #0767D5;
-    border-radius: 15px;
-}
+  }
+  
+  .button2 {
+    padding: 0.5em;
+    padding-left: 2.3em;
+    padding-right: 2.3em;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    transition: .4s ease-in-out;
+    background-color: #252525;
+    color: white;
+  }
+  
+  .button2:hover {
+    background-color: black;
+    color: white;
+  }
+  
+  .button3 {
+    margin-bottom: 3em;
+    padding: 0.5em;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    transition: .4s ease-in-out;
+    background-color: #252525;
+    color: white;
+  }
 
 .text-danger {
-    position: relative;
-    bottom: 30px;
+    display: flex;
     color:  red;
     font-weight: 600;
-    width: 90%;
-    margin: auto;
-
+    width: 100%;
+    text-align: center;
 }
 
-body main div.formBox form .checkbox {
+ .checkbox {
     font-size: 15px;
     display: flex;
     align-items: center;
@@ -126,8 +135,24 @@ body main div.formBox form .checkbox {
     color: white
 }
 
-body main div.formBox form .checkbox input {
+.checkbox input {
     margin: 0;
 }
 
 
+@media (min-width:769px) {
+    .form {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding-left: 2em;
+        padding-right: 2em;
+        padding-bottom: 0.4em;
+        background-color: #171717;
+        border-radius: 25px;
+        margin: 50px auto;
+        width: auto;    
+        
+      }
+
+}
