--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -11,21 +11,22 @@
 
             <main>
                 <article class="detail-product">
-                    <div class="color-container <%= product.color %>">
-                        <div class="product-name">
-                            <h3> <%= product.name %> </h3>
-                        </div>
-                        
-                        <div class="product-price">
-                            <h3> Precio del producto: $<%= product.price %> </h3>
-                        </div>
 
+                    <div class="product-name">
+                        <h4>
+                            <%= product.name %>
+                        </h4>
+                    </div>
+
+                    <div class="product-price">
+                        <h4> Precio del producto: $<%= product.price %>
+                        </h4>
+                    </div>
+                    
+                    <section>
                         <div class="product-img">
                             <img src="/images/<%= product.image %>" alt="<%= product.name %>">
                         </div>
-                    </div>
-
-                    <section class="buy-section">
 
                         <div class='detail-texts' id="interest-fee">
                             <i class="fa-solid fa-credit-card"></i>3 CUOTAS SIN INTERES
@@ -38,21 +39,15 @@
                             </div>
 
                             <div class="buy-buttons">
-                                <a href="/products/product-edit/<%=product.id %>" id="product-redirect"><input class="product-detail-button" type="submit" value="Editar"></a>
-                                <a href="/products/product-cart/<%=product.id %>" id="product-redirect"><input class="product-detail-button" type="submit" value="Comprar">
-                    <form action="/products/delete/<%= product.id %>?_method=DELETE" method="POST">
-                        <input class="product-detail-button" type="submit" value="Borrar" id="delete-button"></input>
-                      </form>
+                                <a href="/products/product-edit/<%=product.id %>" id="product-redirect"><input
+                                        class="product-detail-button" type="submit" value="Editar"></a>
+                                <a href="/products/product-cart" id="product-redirect"><input
+                                        class="product-detail-button" type="submit" value="Agregar al carrito"></a>
+                                    <form action="/products/delete/<%= product.id %>?_method=DELETE" method="POST">
+                                        <input class="product-detail-button" type="submit" value="Borrar"
+                                            id="delete-button"></input>
+                                    </form>
                             </div>
-                        </div>
-                        
-                        <div class="pay-text">ELIGE TU METODO DE PAGO</div>
-
-                        <div class="payment-method">
-                            <div><img src="/images/logo-mercado-credito.png" width="50px"></div>
-                            <div><img src="/images/logo-visa.png" width="50px"></div>
-                            <div><img src="/images/logo-master.png" width="50px"></div>
-                            <div><img id="four"src="/images/logo-pago-facil.png" width="50px"></div>
                         </div>
                     </section>
 
